--- a/app/src/main/res/layout/activity_h_setting.xml
+++ b/app/src/main/res/layout/activity_h_setting.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -12,13 +12,14 @@
         android:id="@+id/frame_container_home_id"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_above="@id/bottom_navigation_home_id"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
         app:menu="@menu/bottom_nav_menu_home"
         android:id="@+id/bottom_navigation_home_id"
-        android:layout_gravity="bottom"
+        android:layout_alignParentBottom="true"
         app:labelVisibilityMode="labeled"
         app:itemRippleColor="@color/color_red"
         app:itemIconTint="@android:color/black"
@@ -32,4 +33,4 @@
         android:layout_height="wrap_content"/>
 
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</RelativeLayout>
