--- a/app/src/main/res/layout/generate_qrcode_layout.xml
+++ b/app/src/main/res/layout/generate_qrcode_layout.xml
@@ -18,7 +18,6 @@
     <ImageView
         android:id="@+id/img_qr_code_id"
         android:layout_width="200dp"
-        android:visibility="gone"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
         android:layout_height="200dp"/>
@@ -40,7 +39,7 @@
         android:text="@string/start_date"
         android:layout_marginBottom="15dp"
         android:textSize="18sp"
-        android:layout_below="@id/l_edittext_1"
+        android:layout_below="@id/l_edittext"
         android:id="@+id/txt_start_date_info"
         android:textColor="@android:color/black"
         android:layout_width="match_parent"
@@ -56,7 +55,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
-        android:id="@+id/l_edittext_1"
+        android:id="@+id/l_edittext"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:hint="@string/durations"
         app:boxStrokeWidth="2dp"
@@ -71,11 +70,11 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:maxLines="1"
-            android:id="@+id/txt_owner_owner_id_id"
+            android:id="@+id/txt_duration_id"
             android:textAlignment="center"
             android:maxLength="2"
             android:inputType="phone"
-            android:textSize="24sp"
+            android:textSize="20sp"
             android:layout_height="wrap_content"/>
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -124,12 +123,16 @@
     </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_share_id"
         android:layout_width="wrap_content"
-        android:layout_below="@id/l_btn"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/img_qr_code_id"
         android:layout_alignParentEnd="true"
         android:layout_margin="15dp"
-        app:elevation="5dp"
-        app:rippleColor="@android:color/white"
+        android:visibility="gone"
+        android:layout_marginTop="-12dp"
+        android:layout_marginBottom="15dp"
         android:src="@drawable/ic_share_black_24dp"
-        android:layout_height="wrap_content"/>
+        app:elevation="5dp"
+        app:fabCustomSize="90dp" />
 </RelativeLayout>
