--- a/app/src/main/res/layout/config_home_layout.xml
+++ b/app/src/main/res/layout/config_home_layout.xml
@@ -1,6 +1,232 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_margin="15dp"
+        android:id="@+id/relative_home_setting_info"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:text="@string/unit_configuration"
+            android:layout_marginBottom="15dp"
+            android:textSize="18sp"
+            android:textAlignment="center"
+            android:id="@+id/txt_home_config_info"
+            android:textColor="@android:color/darker_gray"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:id="@+id/l_edittext_1"
+            android:layout_below="@id/txt_home_config_info"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:hint="@string/buzz_number"
+            app:boxStrokeWidth="2dp"
+            android:layout_marginBottom="20dp"
+            android:textAlignment="center"
+            app:hintTextColor="@android:color/black"
+            app:boxStrokeColor="@android:color/black"
+            android:textColorHint="@android:color/black"
+            android:layout_height="wrap_content">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:maxLines="1"
+                android:id="@+id/txt_owner_owner_id_id"
+                android:textAlignment="center"
+                android:maxLength="20"
+                android:textSize="24sp"
+                android:layout_height="wrap_content"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:id="@+id/l_edittext_2"
+            android:layout_below="@id/l_edittext_1"
+            android:layout_marginBottom="20dp"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:hint="@string/name"
+            app:boxStrokeWidth="2dp"
+            android:textAlignment="center"
+            app:hintTextColor="@android:color/black"
+            app:boxStrokeColor="@android:color/black"
+            android:textColorHint="@android:color/black"
+            android:layout_height="wrap_content">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:maxLines="1"
+                android:textAlignment="center"
+                android:maxLength="20"
+                android:textSize="24sp"
+                android:id="@+id/txt_phone_num_id"
+                android:layout_height="wrap_content"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:id="@+id/l_edittext_3"
+            android:layout_below="@id/l_edittext_2"
+            android:layout_marginBottom="20dp"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:hint="@string/unit_num"
+            app:boxStrokeWidth="2dp"
+            android:textAlignment="center"
+            app:hintTextColor="@android:color/black"
+            app:boxStrokeColor="@android:color/black"
+            android:textColorHint="@android:color/black"
+            android:layout_height="wrap_content">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:maxLines="1"
+                android:maxLength="20"
+                android:id="@+id/txt_owner_name_id"
+                android:textAlignment="center"
+                android:textSize="24sp"
+                android:layout_height="wrap_content"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_marginBottom="20dp"
+            android:id="@+id/l_edittext_4"
+            android:layout_below="@id/l_edittext_3"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:hint="@string/owner_email"
+            app:boxStrokeWidth="2dp"
+            app:hintTextColor="@android:color/black"
+            app:boxStrokeColor="@android:color/black"
+            android:textColorHint="@android:color/black"
+            android:layout_height="wrap_content">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:textAlignment="center"
+                android:maxLines="1"
+                android:id="@+id/txt_owner_email_id"
+                android:maxLength="20"
+                android:textSize="24sp"
+                android:layout_height="wrap_content"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <Button
+            android:id="@+id/btn_home_config_info_id"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/l_edittext_4"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="15dp"
+            android:backgroundTint="@color/colorPrimary"
+            android:drawableLeft="@drawable/ic_save_black_24dp"
+            android:elevation="5dp"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="@string/save_settings"
+            android:textAlignment="center"
+            android:textAllCaps="false"
+            android:textColor="#244955"
+            android:textSize="24sp" />
+
+        <LinearLayout
+            android:layout_marginTop="15dp"
+            android:layout_width="match_parent"
+            android:orientation="vertical"
+            android:paddingStart="10dp"
+            android:background="@drawable/shape_back_home_info"
+            android:layout_below="@id/btn_home_config_info_id"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:orientation="horizontal"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:text="Buzz Number : "
+                    android:textSize="18sp"
+                    android:textColor="@android:color/background_dark"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+                <TextView
+                    android:text="Buzz Number"
+                    android:textSize="22sp"
+                    android:textColor="@android:color/black"
+                    android:textStyle="bold"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:orientation="horizontal"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:text="Name : "
+                    android:textSize="18sp"
+                    android:textColor="@android:color/background_dark"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+                <TextView
+                    android:text="Name"
+                    android:textSize="22sp"
+                    android:textColor="@android:color/black"
+                    android:textStyle="bold"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:orientation="horizontal"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:text="Unit Number : "
+                    android:textSize="18sp"
+                    android:textColor="@android:color/background_dark"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+                <TextView
+                    android:text="Unit Number"
+                    android:textSize="22sp"
+                    android:textColor="@android:color/black"
+                    android:textStyle="bold"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:orientation="horizontal"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:text="Email : "
+                    android:textSize="18sp"
+                    android:textColor="@android:color/background_dark"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+                <TextView
+                    android:text="MimikSmartHome@gmail.com"
+                    android:textSize="22sp"
+                    android:textColor="@android:color/black"
+                    android:textStyle="bold"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+
+        </LinearLayout>
+    </RelativeLayout>
 </LinearLayout>
