--- a/app/src/main/res/layout/logs.xml
+++ b/app/src/main/res/layout/logs.xml
@@ -1,6 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:weightSum="1"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:id="@+id/head_of_table"
+        android:background="@android:color/darker_gray"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:text="@string/expired"
+            android:layout_width="0dp"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:textSize="26sp"
+            android:textColor="@android:color/black"
+            android:layout_weight="0.16"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:text="@string/name"
+            android:layout_width="0dp"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:textSize="26sp"
+            android:textColor="@android:color/black"
+            android:layout_weight="0.16"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:text="@string/date"
+            android:layout_width="0dp"
+            android:textColor="@android:color/black"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:textSize="26sp"
+            android:layout_weight="0.16"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:text="@string/durations"
+            android:textColor="@android:color/black"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:textSize="26sp"
+            android:layout_width="0dp"
+            android:layout_weight="0.16"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:text="@string/password"
+            android:textColor="@android:color/black"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:textSize="26sp"
+            android:layout_width="0dp"
+            android:layout_weight="0.16"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:text="@string/qr_code"
+            android:textColor="@android:color/black"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:textSize="26sp"
+            android:layout_width="0dp"
+            android:layout_weight="0.2"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
+
+    <include
+        android:layout_width="match_parent"
+        android:layout_below="@id/head_of_table"
+        layout="@layout/table_detail"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_height="match_parent"/>
+</RelativeLayout>
